Inlined ActiveMQ message bus test