@@ -24,7 +24,6 @@ package org.bitrepository.protocol.bus;
 import org.bitrepository.bitrepositorymessages.DeleteFileRequest;
 import org.bitrepository.bitrepositorymessages.IdentifyPillarsForDeleteFileRequest;
 import org.bitrepository.bitrepositorymessages.IdentifyPillarsForDeleteFileResponse;
-import org.bitrepository.protocol.ProtocolComponentFactory;
 import org.bitrepository.protocol.activemq.ActiveMQMessageBus;
 import org.bitrepository.protocol.message.ExampleMessageFactory;
 import org.bitrepository.protocol.messagebus.MessageBusManager;
@@ -39,6 +38,7 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 import javax.jms.Message;
 import javax.jms.MessageListener;
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.TimeUnit;
@@ -48,50 +48,45 @@ import static org.bitrepository.common.utils.AllureTestUtils.addStep;
 
 
 /**
- * Runs the GeneralMessageBusTest using a LocalActiveMQBroker (if useEmbeddedMessageBus is true) and a suitable
- * MessageBus based on settingsForTestClient.  Regression tests utilized that uses Allure to generate reports.
+ * Runs the GeneralMessageBusTest using a LocalActiveMQBroker and a suitable
+ * MessageBus based on TestContainers.  Regression tests utilized that uses Allure to generate reports.
  */
-@Testcontainers
+@Testcontainers(disabledWithoutDocker = true)
 class ActiveMQMessageBusTest extends GeneralMessageBusTest {
     
     @Container
-    ActiveMQContainer activemq = new ActiveMQContainer("apache/activemq:5.17.7")
+    ActiveMQContainer activemqContainer = new ActiveMQContainer("apache/activemq:5.17.7")
         .withLogConsumer(l -> System.out.print(l.getUtf8String()));
     
+    private MessageBusConfiguration messageBusConfig;
     
     @Override
-    protected void setupMessageBus() {
-        activemq.start();
-        while (!activemq.isRunning()) {
+    protected void startMessageBus() {
+        activemqContainer.start();
+        while (!activemqContainer.isRunning()) {
             try {
                 Thread.sleep(2000);
             } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             }
         }
-        resetActiveMqConfig();
-    }
-    
-    @Override
-    protected void setupSettings() {
-        super.setupSettings();
-        resetActiveMqConfig();
+        
+        messageBusConfig = new MessageBusConfiguration();
+        messageBusConfig.setURL(activemqContainer.getBrokerUrl());
+        messageBusConfig.setName(activemqContainer.getContainerName());
+        settingsForTestClient.getRepositorySettings()
+                             .getProtocolSettings()
+                             .setMessageBusConfiguration(messageBusConfig);
+        
+        
+        messageBus = new ActiveMQMessageBus(settingsForTestClient, securityManager);
         MessageBusManager.clear();
-        messageBus = new MessageBusWrapper(ProtocolComponentFactory.getInstance().getMessageBus(
-            settingsForTestClient, securityManager));
+        MessageBusManager.injectCustomMessageBus(MessageBusManager.DEFAULT_MESSAGE_BUS, messageBus);
     }
     
     @Override
     public boolean useEmbeddedMessageBus() {
         return false;
-    }
-    
-    private void resetActiveMqConfig() {
-        var conf = new MessageBusConfiguration();
-        conf.setURL(activemq.getBrokerUrl());
-        conf.setName(activemq.getContainerName());
-        settingsForTestClient.getRepositorySettings().getProtocolSettings().setMessageBusConfiguration(conf);
-        
     }
     
     @Test
@@ -102,31 +97,34 @@ class ActiveMQMessageBusTest extends GeneralMessageBusTest {
                 "eg. this identify requests should be handled by everybody.",
                 "Verify that the message bus accepts this message.");
         String myCollectionID = "MyCollection";
-        messageBus.setCollectionFilter(Arrays.asList(myCollectionID));
-        RawMessagebus rawMessagebus = new RawMessagebus(
-            settingsForTestClient.getMessageBusConfiguration(),
-            securityManager);
-        IdentifyPillarsForDeleteFileRequest identifyRequest =
-            ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
-        identifyRequest.setCollectionID(myCollectionID);
-        javax.jms.Message msg = rawMessagebus.createMessage(identifyRequest);
-        rawMessagebus.addHeader(msg, identifyRequest.getClass().getSimpleName(), identifyRequest.getReplyTo(),
-                                null,
-                                identifyRequest.getCorrelationID());
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        collectionReceiver.waitForMessage(IdentifyPillarsForDeleteFileRequest.class);
+        messageBus.setCollectionFilter(List.of(myCollectionID));
+        String collectionDestination = settingsForTestClient.getCollectionDestination();
         
-        addStep("Send an identify request with the 'Collection' header property set to my collection",
-                "Verify that the request bus accepts this message.");
-        msg.setStringProperty(ActiveMQMessageBus.COLLECTION_ID_KEY, myCollectionID);
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        collectionReceiver.waitForMessage(IdentifyPillarsForDeleteFileRequest.class);
-        
-        addStep("Send an invalid message with the 'Receiver' header property set to another specific component",
-                "Verify that the message bus ignores this before parsing the message.");
-        msg.setStringProperty(ActiveMQMessageBus.COLLECTION_ID_KEY, "OtherCollection");
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        collectionReceiver.checkNoMessageIsReceived(IdentifyPillarsForDeleteFileRequest.class);
+        try (RawMessagebus rawMessagebus = new RawMessagebus(messageBusConfig, securityManager)) {
+            var identifyRequest = ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
+            identifyRequest.setCollectionID(myCollectionID);
+            javax.jms.Message msg = rawMessagebus.createMessage(identifyRequest);
+            rawMessagebus.addHeader(msg,
+                                    identifyRequest.getClass().getSimpleName(),
+                                    identifyRequest.getReplyTo(),
+                                    null,
+                                    identifyRequest.getCorrelationID());
+            
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            collectionReceiver.waitForMessage(identifyRequest.getClass());
+            
+            addStep("Send an identify request with the 'Collection' header property set to my collection",
+                    "Verify that the request bus accepts this message.");
+            msg.setStringProperty(ActiveMQMessageBus.COLLECTION_ID_KEY, myCollectionID);
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            collectionReceiver.waitForMessage(identifyRequest.getClass());
+            
+            addStep("Send an invalid message with the 'Receiver' header property set to another specific component",
+                    "Verify that the message bus ignores this before parsing the message.");
+            msg.setStringProperty(ActiveMQMessageBus.COLLECTION_ID_KEY, "OtherCollection");
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            collectionReceiver.checkNoMessageIsReceived(identifyRequest.getClass());
+        }
     }
     
     @Test
@@ -138,22 +136,21 @@ class ActiveMQMessageBusTest extends GeneralMessageBusTest {
                 "The MESSAGE_TO_KEY ");
         String receiverID = "specificReceiver";
         final BlockingQueue<Message> messageList = new LinkedBlockingDeque<>();
-        RawMessagebus rawMessagebus = new RawMessagebus(
-            settingsForTestClient.getMessageBusConfiguration(),
-            securityManager);
-        rawMessagebus.addListener(settingsForTestClient.getCollectionDestination(), new MessageListener() {
-            @Override
-            public void onMessage(Message message) {
-                messageList.add(message);
-            }
-        });
-        IdentifyPillarsForDeleteFileRequest messageToSend =
-            ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
-        messageToSend.setDestination(settingsForTestClient.getCollectionDestination());
-        messageToSend.setTo(receiverID);
-        messageBus.sendMessage(messageToSend);
-        Message receivedMessage = messageList.poll(3, TimeUnit.SECONDS);
-        Assertions.assertEquals(receiverID, receivedMessage.getStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY));
+        try (RawMessagebus rawMessagebus = new RawMessagebus(messageBusConfig, securityManager)) {
+            rawMessagebus.addListener(settingsForTestClient.getCollectionDestination(), new MessageListener() {
+                @Override
+                public void onMessage(Message message) {
+                    messageList.add(message);
+                }
+            });
+            IdentifyPillarsForDeleteFileRequest messageToSend =
+                ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
+            messageToSend.setDestination(settingsForTestClient.getCollectionDestination());
+            messageToSend.setTo(receiverID);
+            messageBus.sendMessage(messageToSend);
+            Message receivedMessage = messageList.poll(3, TimeUnit.SECONDS);
+            Assertions.assertEquals(receiverID, receivedMessage.getStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY));
+        }
     }
     
     @Test
@@ -164,56 +161,60 @@ class ActiveMQMessageBusTest extends GeneralMessageBusTest {
                 "eg. this identify requests should be handled by all components.",
                 "Verify that the identify request bus accepts this identify request.");
         messageBus.setComponentFilter(Arrays.asList(settingsForTestClient.getComponentID()));
+        String collectionDestination = settingsForTestClient.getCollectionDestination();
         
-        RawMessagebus rawMessagebus = new RawMessagebus(
-            settingsForTestClient.getMessageBusConfiguration(),
-            securityManager);
-        IdentifyPillarsForDeleteFileRequest identifyRequest =
-            ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
-        identifyRequest.setDestination(settingsForTestClient.getCollectionDestination());
-        javax.jms.Message msg = rawMessagebus.createMessage(identifyRequest);
-        rawMessagebus.addHeader(msg, identifyRequest.getClass().getSimpleName(), identifyRequest.getReplyTo(),
-                                null,
-                                identifyRequest.getCorrelationID());
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        var msg1 = collectionReceiver.waitForMessage(IdentifyPillarsForDeleteFileRequest.class);
-        
-        addStep("Send an identify request with the 'To' header property set to this component",
-                "Verify that the identify request bus accepts this identify request.");
-        msg.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, settingsForTestClient.getComponentID());
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        var msg2 = collectionReceiver.waitForMessage(IdentifyPillarsForDeleteFileRequest.class);
-        
-        addStep("Send an invalid identify request with the 'To' header property set to another specific component",
-                "Verify that the identify request bus ignores this before parsing the identify request.");
-        msg.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), msg);
-        collectionReceiver.checkNoMessageIsReceived(IdentifyPillarsForDeleteFileRequest.class);
-        
-        addStep("Send an identify response with the 'To' header property set to another component",
-                "Verify that the message bus accepts this message.");
-        IdentifyPillarsForDeleteFileResponse identifyResponse =
-            ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileResponse.class);
-        identifyRequest.setDestination(settingsForTestClient.getCollectionDestination());
-        javax.jms.Message response = rawMessagebus.createMessage(identifyResponse);
-        rawMessagebus.addHeader(response, identifyResponse.getClass().getSimpleName(), identifyResponse.getReplyTo(),
-                                null,
-                                identifyRequest.getCorrelationID());
-        response.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), response);
-        var msg3 = collectionReceiver.waitForMessage(IdentifyPillarsForDeleteFileResponse.class);
-        
-        addStep("Send an non-identify request with the 'To' header property set to another component",
-                "Verify that the message bus accepts this message.");
-        DeleteFileRequest request =
-            ExampleMessageFactory.createMessage(DeleteFileRequest.class);
-        request.setDestination(settingsForTestClient.getCollectionDestination());
-        javax.jms.Message rq = rawMessagebus.createMessage(request);
-        rawMessagebus.addHeader(rq, request.getClass().getSimpleName(), request.getReplyTo(),
-                                null,
-                                identifyRequest.getCorrelationID());
-        response.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
-        rawMessagebus.sendMessage(settingsForTestClient.getCollectionDestination(), rq);
-        var msg4 = collectionReceiver.waitForMessage(DeleteFileRequest.class);
+        try (RawMessagebus rawMessagebus = new RawMessagebus(messageBusConfig, securityManager)) {
+            var identifyRequest = ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileRequest.class);
+            
+            identifyRequest.setDestination(collectionDestination);
+            javax.jms.Message msg = rawMessagebus.createMessage(identifyRequest);
+            rawMessagebus.addHeader(msg,
+                                    identifyRequest.getClass().getSimpleName(),
+                                    identifyRequest.getReplyTo(),
+                                    null,
+                                    identifyRequest.getCorrelationID());
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            var msg1 = collectionReceiver.waitForMessage(identifyRequest.getClass());
+            
+            addStep("Send an identify request with the 'To' header property set to this component",
+                    "Verify that the identify request bus accepts this identify request.");
+            msg.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, settingsForTestClient.getComponentID());
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            var msg2 = collectionReceiver.waitForMessage(identifyRequest.getClass());
+            
+            addStep("Send an invalid identify request with the 'To' header property set to another specific component",
+                    "Verify that the identify request bus ignores this before parsing the identify request.");
+            msg.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
+            rawMessagebus.sendMessage(collectionDestination, msg);
+            collectionReceiver.checkNoMessageIsReceived(identifyRequest.getClass());
+            
+            addStep("Send an identify response with the 'To' header property set to another component",
+                    "Verify that the message bus accepts this message.");
+            var identifyResponse = ExampleMessageFactory.createMessage(IdentifyPillarsForDeleteFileResponse.class);
+            identifyRequest.setDestination(collectionDestination);
+            javax.jms.Message response = rawMessagebus.createMessage(identifyResponse);
+            rawMessagebus.addHeader(response,
+                                    identifyResponse.getClass().getSimpleName(),
+                                    identifyResponse.getReplyTo(),
+                                    null,
+                                    identifyRequest.getCorrelationID());
+            response.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
+            rawMessagebus.sendMessage(collectionDestination, response);
+            var msg3 = collectionReceiver.waitForMessage(identifyResponse.getClass());
+            
+            addStep("Send an non-identify request with the 'To' header property set to another component",
+                    "Verify that the message bus accepts this message.");
+            var deleteFileRequest = ExampleMessageFactory.createMessage(DeleteFileRequest.class);
+            deleteFileRequest.setDestination(collectionDestination);
+            var deleteFileRequestMessage = rawMessagebus.createMessage(deleteFileRequest);
+            rawMessagebus.addHeader(deleteFileRequestMessage,
+                                    deleteFileRequest.getClass().getSimpleName(),
+                                    deleteFileRequest.getReplyTo(),
+                                    null,
+                                    identifyRequest.getCorrelationID());
+            response.setStringProperty(ActiveMQMessageBus.MESSAGE_TO_KEY, "OtherComponent");
+            rawMessagebus.sendMessage(collectionDestination, deleteFileRequestMessage);
+            var msg4 = collectionReceiver.waitForMessage(deleteFileRequest.getClass());
+        }
     }
 }
